# Distributed-TaskScheduler-Chronos

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.master  Dockerfile.worker  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  health.ts  stats.ts  tasks.ts  workers.ts
dashboard/src/hooks/: useHealth.ts  useMetricsHistory.ts  useRealtimeData.ts  useStats.ts  useTasks.ts  useWebSocket.ts  useWorkers.ts
dashboard/src/pages/: Events.tsx  Metrics.tsx  Overview.tsx  Tasks.tsx  Workers.tsx
dashboard/src/providers/: QueryProvider.tsx  WebSocketProvider.tsx
dashboard/src/types/: events.ts  health.ts  task.ts  worker.ts
dashboard/src/utils/: colors.ts  format.ts
docs/: architecture.md
k8s/crds/: task_crd.yaml  worker_crd.yaml
k8s/helm/chronos-scheduler/: Chart.yaml  values.yaml
k8s/operator/: Dockerfile  operator.py  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 001_initial_schema.py  (+1 more)
src/chronos/: task_templates.py
tests/: conftest.py
tests/integration/: test_api_health.py  test_api_tasks.py  test_api_workers.py  test_docker_execution.py  test_scheduling_flow.py
tests/load/: locustfile.py
tests/unit/: test_bin_packing.py  test_failure_detector.py  test_preemption.py  test_priority_queue.py  test_resource_reporter.py  test_schemas.py  test_state_machine.py
(+105 files in other folders)
