[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-k8s-scheduler"
version = "0.1.0"
description = "Production-grade Distributed Task Scheduler inspired by Kubernetes Control Plane + Google Borg"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "redis[hiredis]==5.2.1",
    "etcd3-py==0.1.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "prometheus-client==0.21.1",
    "prometheus-fastapi-instrumentator==7.0.2",
    "httpx==0.28.1",
    "psutil==6.1.1",
    "python-dotenv==1.0.1",
    "docker>=7.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
    "locust==2.32.4",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests requiring Docker daemon and external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
